; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr_fs_snapshot.c_fs_snapshot_list.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr_fs_snapshot.c_fs_snapshot_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attrlist = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@FSOPT_LIST_SNAPSHOT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fs_snapshot_list(i32 %0, %struct.attrlist* %1, i8* %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.attrlist*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store %struct.attrlist* %1, %struct.attrlist** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %5
  %15 = load i32, i32* @EINVAL, align 4
  store i32 %15, i32* @errno, align 4
  store i32 -1, i32* %6, align 4
  br label %23

16:                                               ; preds = %5
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.attrlist*, %struct.attrlist** %8, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = load i64, i64* %10, align 8
  %21 = load i32, i32* @FSOPT_LIST_SNAPSHOT, align 4
  %22 = call i32 @getattrlistbulk(i32 %17, %struct.attrlist* %18, i8* %19, i64 %20, i32 %21)
  store i32 %22, i32* %6, align 4
  br label %23

23:                                               ; preds = %16, %14
  %24 = load i32, i32* %6, align 4
  ret i32 %24
}

declare dso_local i32 @getattrlistbulk(i32, %struct.attrlist*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
